FIX - sidebar overflow ADD - main headbar

--- a/app.css
+++ b/app.css
@@ -136,7 +136,9 @@ body{
         width: 75%;
         margin: 0 auto;
     }
-
+    .scroll{
+        overflow-y: scroll;
+    }
 
 /***COMPONENTS*****************************************************/
     .cta-link{
